CSS: Use count negative background-size

Add use counters for negative values in background-size and mask-size.

Spec forbids negative background-size.
https://drafts.csswg.org/css-backgrounds/#background-size

Bug: 825549
Change-Id: I5415bd9123b86907665c552801fbeca4b587b1ea
Reviewed-on: https://chromium-review.googlesource.com/984913
Commit-Queue: Eric Willigers <ericwilligers@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548486}
Former-commit-id: 55816db5c7307cb87943dc09dfc2a79b91582422